frontend delete button linking to backend fixed I think? (#24)
axios stuff will be added later

--- a/views/job-role-list.njk
+++ b/views/job-role-list.njk
@@ -246,12 +246,14 @@
                                     </svg>
                                     Edit
                                 </button>
-                                <button class="btn btn-sm btn-outline btn-error" title="Delete Job Role">
-                                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewbox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
-                                    </svg>
-                                    Delete
-                                </button>
+                                <form method="POST" action="/job-roles/{{ job.id }}/delete" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete {{ job.name }}?')">
+    <button type="submit" class="btn btn-sm btn-outline btn-error" title="Delete Job Role">
+        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewbox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
+        </svg>
+        Delete
+    </button>
+</form>
                                 <a href="/job-roles/{{ job.id }}" class="btn btn-primary btn-sm">
                                     View Details
                                     <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewbox="0 0 24 24">
