--- a/views/layouts/base.njk
+++ b/views/layouts/base.njk
@@ -36,7 +36,10 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="/" class="btn btn-ghost text-xl">Job Application System</a>
+                    <a href="/" class="btn btn-ghost text-xl">
+                        <img src="/images/kainos-logo.png" alt="Kainos Logo" class="h-8">
+                        <span class="ml-2">Job Application System</span>
+                    </a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
